base/mastodon/mastodon-fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 25m

spec:
  tls:
    - hosts:
        - toot.localhost
      secretName:
        mastodon-tls
  rules:
  - host: toot.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mastodon-web
            port:
              number: 3000
      - path: /api/v1/streaming/
        pathType: Prefix
        backend:
          service:
            name: mastodon-streaming
            port:
              number: 4000
